--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <link rel='stylesheet' type='css' href='styles.css'> 
   </head>
   <body>
-    <div class="scoreboard">
-      <!-- Modify the scoreboard when important events occur in your game! -->
+    <div class="container">
       <div class="distance-m">Distance (miles): <span>0</span></div>
       <div class="distance-km">Distance (kilometers): <span>0</span></div>
     </div>
