fixed Size and added size in miles of planets.

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   </head>
   <body>
     <div class="container">
-      <div class="distance-m">Distance (miles): <span>0</span></div>
-      <div class="distance-km">Distance (kilometers): <span>0</span></div>
+      <div class="size-m">Size (miles): <span class="SizeMiles">1,516</span></div>
+      <div class="size-km">Size (kilometers): <span>0</span></div>
     </div>
     <script src="d3.js" charset="utf-8"></script>
     <script src='spacey.js'></script>
