updated rgbs and instructions.

--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
   <body>
     <div class="container">
       <div class="size-m">Size (miles): <span class="SizeMiles">1,516</span></div>
-      <div class="size-km">Size (kilometers): <span>0</span></div>
+      <div class="size-km">Size (kilometers): <span class="SizeKilometers">2,440</span></div>
     </div>
     <script src="d3.js" charset="utf-8"></script>
     <script src='spacey.js'></script>
   </body>
+  <div class="instructions">Click on planet to cycle through the planets.</div>
 </html>
